Docs: Make sure anchor elements aren't hidden by header

--- a/repos/plywood/src/web/theme/layout.scss
+++ b/repos/plywood/src/web/theme/layout.scss
@@ -20,13 +20,6 @@ body {
     max-width: 1100px;
 }
 
-.content {
-    margin-top: 42px;
-    margin-left: 280px;
-    min-width: 340px;
-    padding: 15px 35px;
-}
-
 //-------------------------------------------------
 // Header
 //-------------------------------------------------
@@ -65,6 +58,29 @@ body {
 }
 
 //-------------------------------------------------
+// Article
+//-------------------------------------------------
+.content {
+    margin-top: 42px;
+    margin-left: 280px;
+    min-width: 340px;
+    padding: 15px 35px;
+
+    .anchored {
+        position: relative;
+    }
+
+    span.anchor {
+        position: absolute;
+        top: -50px;
+    }
+
+    .highlighted {
+        background: #ffffd0;
+    }
+}
+
+//-------------------------------------------------
 // Sidebar
 //-------------------------------------------------
 
@@ -91,39 +107,35 @@ body {
     border-radius: 4px;
 }
 
-li.caret {
-    cursor: pointer;
-    -webkit-user-select: none; /* Safari 3.1+ */
-    -moz-user-select: none; /* Firefox 2+ */
-    -ms-user-select: none; /* IE 10+ */
-    user-select: none;
-    span {
-        position: relative;
-    }
-}
-
-li.caret-down span::before {
-    -ms-transform: rotate(90deg);
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg);  
-}
-
-.nested {
-    display: none;
-    height: 0px;
-}
-  
-.active {
-    display: block;
-    height: auto;
-}
-
 .sidebar {
     color: #505050;
     
     ul {
         line-height: 1.55em;
         overflow: hidden;
+    }
+    li.caret-down span::before {
+        -ms-transform: rotate(90deg);
+        -webkit-transform: rotate(90deg);
+        transform: rotate(90deg);  
+    }
+    .nested {
+        display: none;
+        height: 0px;
+    }
+    .active {
+        display: block;
+        height: auto;
+    }
+    li.caret {
+        cursor: pointer;
+        -webkit-user-select: none; /* Safari 3.1+ */
+        -moz-user-select: none; /* Firefox 2+ */
+        -ms-user-select: none; /* IE 10+ */
+        user-select: none;
+        span {
+            position: relative;
+        }
     }
     li.caret span::before {
         content: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTEiIGhlaWdodD0iMTEiIHZlcnNpb249IjEuMSIgdmlld0JveD0iMCAwIDEyIDEyIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPgogPHBhdGggZD0ibTYgMSA1IDUtNSA1IiBmaWxsPSJub25lIiBzdHJva2U9IiM1NTU1NTUiIHN0cm9rZS13aWR0aD0iMS44Ii8+Cjwvc3ZnPgo=);
@@ -161,8 +173,8 @@ li.caret-down span::before {
     a {
         color: inherit;
     }
+    .inner {
+        margin: 0.3em 0em;
+    }
 }
 
-.sidebar .inner {
-    margin: 0.3em 0em;
-}
